# parser

./: .gitignore  .travis.yml  Cargo.toml  README.md  codegen.nix  flake.nix  overlay.nix  parser.nix  pgo_build.sh  rustig.toml  schema.json
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: allmessages.rs  bench.rs  iai.rs  sendprop.rs
codegen/: .gitignore  Cargo.toml  out.rs
codegen/src/: gameevent.rs  main.rs  propnames.rs
data/: .gitignore  comp.json  comp_message_types.json  decal.json  emptysaytext.json  gully.json  gully_game_state.json  malformed_cvar.json  nousers.json  saytext2.json  small.json  small_entities.json  small_game_state.json
examples/: allprops.rs
fuzz/: .gitignore  Cargo.toml  flake.nix
fuzz/fuzz_targets/: fuzz_target_1.rs  real_inputs.rs
nix/: codegen.nix  overlay.nix  parser.nix  schema.nix
parse_gen/: Cargo.toml
parse_gen/src/: lib.rs
parse_gen/tests/: test.rs
smoker/: Cargo.toml
smoker/src/: main.rs
src/: consthash.rs  lib.rs  main.rs  nullhasher.rs  test.rs
src/codegen/: gameevent.rs  mod.rs  propnames.rs
src/demo/: gameevent_gen.rs  gamevent.rs  header.rs  lzss.rs  mod.rs  sendprop.rs  sendprop_gen.rs  vector.rs
src/demo/data/: game_state.rs  mod.rs  userinfo.rs
src/demo/message/: bspdecal.rs  classinfo.rs  gameevent.rs  generated.rs  mod.rs  packetentities.rs  prefetch.rs  serverinfo.rs  setconvar.rs  stringtable.rs  tempentities.rs  usermessage.rs  voice.rs
src/demo/packet/: consolecmd.rs  datatable.rs  message.rs  mod.rs  stop.rs  stringtable.rs  synctick.rs  usercmd.rs
src/demo/parser/: analyser.rs  dispatcher.rs  error.rs  gamestateanalyser.rs  handler.rs  messagetypeanalyser.rs  mod.rs  player_summary_analyzer.rs  state.rs
test_data/: .gitignore  allprops.txt  comp.json  decal.json  emptysaytext.json  gully.json  gully_game_state.json  gully_props.json  malformed_cvar.json  nousers.json  protocol23.json  saytext2.json  short-2024.dem  small.dem  small.json  small_entities.json  small_game_state.json  unicode-saytext.json
test_data/string_tables/: DynamicModels_meta.json  EffectDispatch_meta.json  GameRulesCreation_meta.json  InfoPanel_meta.json  Materials_meta.json  ParticleEffectNames_meta.json  Scenes_meta.json  ServerMapCycleMvM_meta.json  ServerPopFiles_meta.json  VguiScreen_meta.json  decalprecache_meta.json  downloadables_meta.json  genericprecache_meta.json  instancebaseline_meta.json  lightstyles_meta.json  modelprecache_meta.json  server_query_info_meta.json  soundprecache_meta.json  userinfo_meta.json
tests/: entity.rs  message_reencode.rs  reencode.rs  sendprops.rs  stringtable.rs  tests.rs
tests/snapshots/: entity__entity_test.snap  sendprops__flatten_test.snap  tests__comp.dem_minimal.snap  tests__decal.dem_minimal.snap  tests__emptysaytext.dem_minimal.snap  tests__gully.dem.snap  tests__gully.dem_minimal.snap  tests__malformed_cvar.dem_minimal.snap  tests__nousers.dem_minimal.snap  tests__protocol23.dem_minimal.snap  tests__saytext2.dem_minimal.snap  tests__small.dem.snap  tests__small.dem_minimal.snap  tests__unicode-saytext.dem_minimal.snap
