[package]
name = "tf-demo-parser"
description = "parser for tf2 demo files"
version = "0.4.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/demostf/parser"
exclude = [ "tests/fuzz", "test_data" ]

[lib]
name = "tf_demo_parser"
path = "src/lib.rs"

[[bin]]
name = "parse_demo"
path = "src/bin/main.rs"

[[bin]]
name = "reencode_demo"
path = "src/bin/reencode.rs"

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
required-features = ["schema"]

[dependencies]
bitbuffer = { version = "0.10", features = ["serde"] }
num_enum = "0.5"
num-traits = "0.2"
enumflags2 = { version = "0.7", features = ["serde"] }
snap = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_repr = "0.1"
err-derive = "0.3"
parse-display = "0.5"
main_error = "0.1"
jemallocator = { version = "0.3", optional = true }
better-panic = { version = "0.3", optional = true }
no-panic = { version = "0.1", optional = true }
fnv = "1"
steamid-ng = "1"
schemars = { version = "0.8", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
schema = ["schemars", "bitbuffer/schemars"]

[dev-dependencies]
pretty_assertions = "1"
test-case = "1"
iai = "0.1"

[profile.release]
lto = true
debug = true

[profile.dev]
opt-level = 2

[[bench]]
name = "iai"
harness = false
