[package]
name = "tf-demo-parser-gen"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
tf-demo-parser = { version = "*", path = "../" }
quote = "1"
syn = { version = "1", features = ["full"] }
Inflector = { version = "0.11", default-features = false }
better-panic = "0.2"
proc-macro2 = "1"
tempfile = "3"
lazy_static = "1"
fnv = "1"
prettyplease = "0.1"
main_error = "0.1.2"