[package]
name = "tf-demo-parser-smoker"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "smoker"
path = "src/main.rs"

[dependencies]
tf-demo-parser = { version = "0.1", path = "../" }
rayon = "1.3.0"
jemallocator = "0.3"
better-panic = "0.1"
main_error = "0.1.0"